--- a/asvla/src/components/forge/carpromo/CarPromo.scss
+++ b/asvla/src/components/forge/carpromo/CarPromo.scss
@@ -425,6 +425,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 50;
 }
 
 .cardPopup__content {
@@ -432,6 +433,10 @@
   padding: 20px;
   border-radius: 10px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 .cardPopup__content h2 {
@@ -439,7 +444,7 @@
 }
 
 .cardPopup__content p {
-  margin: 0 0 20px;
+  margin: 0 0 10px;
 }
 
 .cardPopup__content button {
