--- a/asvla/src/components/forge/carpromo/CarPromo.scss
+++ b/asvla/src/components/forge/carpromo/CarPromo.scss
@@ -429,22 +429,37 @@
 }
 
 .cardPopup__content {
-  background: white;
-  padding: 20px;
+  background: #000;
+  padding: 40px;
   border-radius: 10px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
+
+  @include mediaQuerys.mobile {
+    padding: 10vw;
+    border-radius: 2.667vw;
+  }
 }
 
 .cardPopup__content h2 {
   margin: 0 0 10px;
+  color: white;
+
+  @include mediaQuerys.mobile {
+    font-size: 6.5vw;
+  }
 }
 
 .cardPopup__content p {
   margin: 0 0 10px;
+  color: white;
+
+  @include mediaQuerys.mobile {
+    font-size: 3vw;
+  }
 }
 
 .cardPopup__content button {
@@ -454,4 +469,8 @@
   color: white;
   border-radius: 5px;
   cursor: pointer;
+
+  @include mediaQuerys.mobile {
+    padding: 2.5vw 5vw;
+  }
 }
