--- a/asvla/src/components/forge/dice/DiceGame.scss
+++ b/asvla/src/components/forge/dice/DiceGame.scss
@@ -121,11 +121,23 @@
 .diceNumber {
   color: #fff;
   font-size: 15px;
-  height: 15px;
+  height: 50px;
+  width: 50px;
+  background: yellow;
+  color: #000;
+  border-radius: 5px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   @include mediaQuerys.mobile {
-    font-size: 4vw;
-    height: 4vw;
+    margin-top: 5vw;
+    font-size: 6vw;
+    border: 8px;
+    // padding: 2vw;
+    height: 10vw;
+    border-radius: 2vw;
   }
 }
 
